Fix title text overflow, add ad form char limits

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,7 +61,11 @@ body {
   flex-direction: column; }
   .ad__title {
     font-size: 2rem;
-    font-weight: 700; }
+    font-weight: 700;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow-wrap: break-word; }
     .ad__title:link, .ad__title:visited {
       text-decoration: none;
       color: #000; }
@@ -77,6 +81,9 @@ body {
     transition: all .2s; }
     .ad__observe-icon:hover {
       transform: scale(1.1); }
+    .ad__observe-icon.to-remove:hover {
+      transform: scale(1.1);
+      color: #777; }
   .ad__image {
     width: 100%;
     border-radius: 1rem; }
@@ -95,7 +102,7 @@ body {
   align-items: center;
   justify-content: space-between;
   transition: all .2s;
-  height: 10rem; }
+  height: 9rem; }
   .navbar__logo-text {
     font-size: 5rem;
     font-family: Audiowide, Roboto, Arial, Helvetica, sans-serif;
@@ -105,11 +112,11 @@ body {
     transition: all .2s; }
   .navbar__search {
     display: flex;
-    flex: 0 0 40%;
+    flex: 0 0 35%;
     justify-content: center; }
   .navbar__search-input {
     width: 75%;
-    padding: 1.25rem 2.5rem;
+    padding: 1rem 2.5rem;
     border-radius: 10rem;
     transition: all .3s;
     align-self: center;
@@ -122,7 +129,7 @@ body {
     .navbar__search-input:focus {
       outline: none; }
     .navbar__search-input:focus {
-      width: 100%;
+      width: 90%;
       box-shadow: 0 0 10px black; }
   .navbar__search-button {
     background-color: transparent;
@@ -149,7 +156,7 @@ body {
     border-radius: 1rem;
     text-decoration: none;
     color: #000;
-    padding: .75rem 2.5rem;
+    padding: 0.75rem 1.5rem;
     transition: all .2s; }
     .nav__link:hover, .nav__link:focus {
       color: #e4e4e4;
@@ -210,63 +217,81 @@ body {
       color: #000;
       font-size: 1.4em; }
 
+.card-wrapper {
+  width: 100%;
+  max-width: 90rem;
+  padding: 0 5rem; }
+
 .card {
   display: flex;
   align-items: center;
-  justify-content: start;
   background-color: #fff;
-  padding: 3rem;
+  padding: 2rem;
   margin-top: 16rem;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
   border-radius: 1rem;
-  width: 100%;
-  max-width: 100rem;
-  word-break: break-all; }
-  .card__wrapper {
-    width: 100%;
-    position: relative; }
+  word-break: break-all;
+  position: relative; }
   .card__observe-icon {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 1rem;
+    right: 2rem;
     font-size: 2.5rem;
     color: #ef233c;
     cursor: pointer;
     transition: all .2s; }
     .card__observe-icon:hover {
       transform: scale(1.1); }
+  .card__author {
+    font-size: 1.6rem; }
   .card__contact-number {
     margin-top: 1rem;
     font-size: 1.4rem; }
   .card__location {
     font-size: 1.4rem; }
-  .card__image {
-    width: 50rem;
-    height: 35rem;
-    border-radius: 1rem; }
-  .card__content {
+  .card__info {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: start;
-    padding-left: 3rem;
-    flex-basis: 100%;
-    min-height: 35rem; }
+    max-width: 25rem;
+    margin-left: 4rem;
+    min-height: 25rem; }
   .card__title {
     font-size: 2.5rem;
-    border-bottom: 1px solid #777;
+    line-height: 3rem;
     width: 100%; }
   .card__price {
-    font-size: 2rem;
-    border-bottom: 1px solid #777;
+    font-size: 1.6rem;
     width: 100%; }
     .card__price::placeholder {
       color: #e4e4e4; }
-  .card__description {
-    margin: 2rem 0;
-    font-size: 1.4rem;
+  .card__image {
+    width: 60%;
+    border-radius: 1rem; }
+
+.description-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  background-color: #fff;
+  padding: 2rem;
+  margin-top: 2rem;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  border-radius: 1rem;
+  width: 100%;
+  max-width: 100rem;
+  word-break: break-all; }
+  .description-box__title {
+    align-self: start; }
+  .description-box__text {
+    font-size: 1.5rem;
+    align-self: start;
+    padding: 2rem 0 2rem 0;
     white-space: pre-line; }
-  .card__buttons {
+  .description-box__buttons {
+    margin-top: 3rem;
     display: flex;
     width: 100%;
     align-items: center;
