--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -56,10 +56,13 @@
     display: flex;
     flex-direction: column;
 
-
     &__title {
         font-size: 2rem;
         font-weight: 700;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow-wrap: break-word;
 
         &:link,
         &:visited {
@@ -71,7 +74,6 @@
     &__price {
         font-size: 1.8rem;
     }
-
 
     &__price-observe {
         display: flex;
@@ -86,6 +88,11 @@
 
         &:hover {
             transform: scale(1.1);
+        }
+
+        &.to-remove:hover {
+            transform: scale(1.1);
+            color: $color-grey-dark-1;
         }
     }
 
@@ -111,7 +118,7 @@
     align-items: center;
     justify-content: space-between;
     transition: all .2s;
-    height: 10rem;
+    height: 9rem;
 
     &__logo-text {
         font-size: 5rem;
@@ -124,13 +131,13 @@
 
     &__search {
         display: flex;
-        flex: 0 0 40%;
+        flex: 0 0 35%;
         justify-content: center;
     }
 
     &__search-input {
         width: 75%;
-        padding: 1.25rem 2.5rem;
+        padding: 1rem 2.5rem;
         border-radius: 10rem;
         transition: all .3s;
         align-self: center;
@@ -148,7 +155,7 @@
         }
 
         &:focus {
-            width: 100%;
+            width: 90%;
             box-shadow: 0 0 10px rgb(0, 0, 0);
         }
     }
@@ -189,7 +196,7 @@
         border-radius: 1rem;
         text-decoration: none;
         color: #000;
-        padding: .75rem 2.5rem;
+        padding: 0.75rem 1.5rem;
         transition: all .2s;
 
         &:hover,
@@ -270,32 +277,29 @@
             font-size: 1.4em;
         }
     }
+}
 
-
+.card-wrapper {
+    width: 100%;
+    max-width: 90rem;
+    padding: 0 5rem;
 }
 
 .card {
     display: flex;
     align-items: center;
-    justify-content: start;
     background-color: #fff;
-    padding: 3rem;
+    padding: 2rem;
     margin-top: 16rem;
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
     border-radius: 1rem;
-    width: 100%;
-    max-width: 100rem;
     word-break: break-all;
-
-    &__wrapper {
-        width: 100%;
-        position: relative;
-    }
+    position: relative;
 
     &__observe-icon {
         position: absolute;
-        top: 0;
-        right: 0;
+        top: 1rem;
+        right: 2rem;
         font-size: 2.5rem;
         color: $color-secondary;
         cursor: pointer;
@@ -304,6 +308,10 @@
         &:hover {
             transform: scale(1.1);
         }
+    }
+
+    &__author {
+        font-size: 1.6rem;
     }
 
     &__contact-number {
@@ -315,31 +323,24 @@
         font-size: 1.4rem;
     }
 
-    &__image {
-        width: 50rem;
-        height: 35rem;
-        border-radius: 1rem;
-    }
-
-    &__content {
+    &__info {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         align-items: start;
-        padding-left: 3rem;
-        flex-basis: 100%;
-        min-height: 35rem;
+        max-width: 25rem;
+        margin-left: 4rem;
+        min-height: 25rem;
     }
 
     &__title {
         font-size: 2.5rem;
-        border-bottom: 1px solid $color-grey-dark-1;
+        line-height: 3rem;
         width: 100%;
     }
 
     &__price {
-        font-size: 2rem;
-        border-bottom: 1px solid $color-grey-dark-1;
+        font-size: 1.6rem;
         width: 100%;
 
         &::placeholder {
@@ -347,13 +348,39 @@
         }
     }
 
-    &__description {
-        margin: 2rem 0;
-        font-size: 1.4rem;
+    &__image {
+        width: 60%;
+        border-radius: 1rem;
+    }
+}
+
+.description-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    background-color: #fff;
+    padding: 2rem;
+    margin-top: 2rem;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    border-radius: 1rem;
+    width: 100%;
+    max-width: 100rem;
+    word-break: break-all;
+
+    &__title {
+        align-self: start;
+    }
+
+    &__text {
+        font-size: 1.5rem;
+        align-self: start;
+        padding: 2rem 0 2rem 0;
         white-space: pre-line;
     }
 
     &__buttons {
+        margin-top: 3rem;
         display: flex;
         width: 100%;
         align-items: center;
